--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=Inventory Service
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format-sql=true
+
+spring.datasource.url=jdbc:postgresql://localhost:5433/demo
+spring.datasource.username=kudoo
+spring.datasource.password=123456
+#spring.jpa.hibernate.ddl-auto=<create | create-drop | update | validate | none>
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation = true
+
+logging.level.root=INFO
+logging.level.org.springframework.web = DEBUG
+
+spring.config.import = env.properties
